2015-07-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #18078]
	* scripts/check-localplt.awk: Support alternate relocations.
	* scripts/localplt.awk: Also check relocations in DT_RELA/DT_REL
	sections.
	* sysdeps/unix/sysv/linux/i386/localplt.data: Mark free and
	malloc entries with + REL R_386_GLOB_DAT.
	* sysdeps/x86_64/localplt.data: New file.

2015-07-29  Andrew Senkevich  <andrew.senkevich@intel.com>

	[BZ #18731]
	* sysdeps/x86_64/fpu/math-tests-arch.h: Added AVX runtime check.
	* sysdeps/x86_64/fpu/test-double-vlen4.c: Likewise.
	* sysdeps/x86_64/fpu/test-float-vlen8.c: Likewise.

2015-07-27  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/ia64/localplt.data: Delete __tls_get_addr.

2015-07-27  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/ia64/bits/atomic.h (atomic_exchange_and_add): Define
	directly in terms of __sync_fetch_and_add and delete (int) cast.

2015-07-27  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/ia64/Makefile (CPPFLAGS): Delete
	the -D_ASM_IA64_CURRENT_H flag.

2015-07-27  Mike Frysinger  <vapier@gentoo.org>

	[BZ #18641]
	* pwd/pwd.h (putpwent): Delete __nonnull markings.

2015-07-27  Andreas Schwab  <schwab@suse.de>

	* conform/conformtest.pl (checknamespace): Filter out string
	literals while tokenizing.

2015-07-26  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/nios2/dl-sysdep.h (DL_EXTERN_PROTECTED_DATA): Define.
	* sysdeps/nios2/dl-machine.h (elf_machine_type_class): Handle
	ELF_RTYPE_CLASS_EXTERN_PROTECTED_DATA.

2015-07-26  Chung-Lin Tang  <cltang@codesourcery.com>

	* nptl/tst-join7mod.c: Add #include <string.h>.

2015-07-25  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/nios2/libm-test-ulps: Update.

2015-07-25  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/unix/sysv/linux/nios2/setcontext.S (__setcontext):
	Fix order of arguments to the rt_sigprocmask syscall.
	* sysdeps/unix/sysv/linux/nios2/swapcontext.S (__swapcontext):
	Likewise.
